--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,9 @@ jobs:
 
       - name: Build
         run: pnpm build
+        env:
+          TURBO_TOKEN: ${{ secrets.turbo_token }}
+          TURBO_TEAM: ${{ secrets.turbo_team }}
 
       - name: Test
         run: pnpm test
@@ -59,3 +62,6 @@ jobs:
 
       - name: Lint
         run: pnpm lint
+        env:
+          TURBO_TOKEN: ${{ secrets.turbo_token }}
+          TURBO_TEAM: ${{ secrets.turbo_team }}
