--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,12 @@ name: Test
 
 on:
   workflow_call:
+    inputs:
+      node-version:
+        description: 'Node version on which to run the tests'
+        type: number
+        default: 16
+
     secrets:
       turbo_token:
         required: false
@@ -23,7 +29,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: ${{ inputs.node-version }}
           cache: "pnpm"
 
       - name: Install dependencies
