--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Lint
 
 on:
   workflow_call:
@@ -6,7 +6,7 @@ on:
       node-version:
         description: 'Node version on which to run the tests'
         type: number
-        default: 16
+        default: 18
 
     secrets:
       turbo_token:
@@ -20,7 +20,8 @@ env:
   NODE_VERSION: ${{ inputs.node-version }}
   
 jobs:
-  test:
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
@@ -29,7 +30,6 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v2.2.4
 
-      # TODO: partition cache based on inputs (os)
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
@@ -39,15 +39,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      # TODO: this step can be removed, but that'll reduce the visibility of compilation errors 
-      - name: Build
-        run: pnpm build
-        env:
-          TURBO_TOKEN: ${{ secrets.turbo_token }}
-          TURBO_TEAM: ${{ secrets.turbo_team }}
-
-      - name: Test
-        run: pnpm test
+      - name: Lint
+        run: pnpm lint
         env:
           TURBO_TOKEN: ${{ secrets.turbo_token }}
           TURBO_TEAM: ${{ secrets.turbo_team }}
