--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -19,5 +19,5 @@ jobs:
         uses: github/super-linter/slim@v4
         env:
           VALIDATE_GITHUB_ACTIONS: true
-          DEFAULT_BRANCH: master
+          DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
