chore(ff-merge): remove explicit permission

--- a/.github/workflows/ff-merge.yml
+++ b/.github/workflows/ff-merge.yml
@@ -8,12 +8,9 @@ on:
         default: main
         type: string
 
-permissions:
-  contents: write
-
 jobs:
   fast-forward:
-    name: Fast-forward merge head ref into main
+    name: Fast-forward merge into ${{ inputs.base }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
