--- a/.github/workflows/ff-merge.yml
+++ b/.github/workflows/ff-merge.yml
@@ -7,6 +7,9 @@ on:
         description: The branch into which you want your code merged
         default: main
         type: string
+    secrets:
+      GH_ADMIN_TOKEN:
+        required: false
 
 jobs:
   fast-forward:
@@ -18,6 +21,7 @@ jobs:
         with:
           ref: ${{ inputs.base }}
           fetch-depth: 0
+          token: ${{ secrets.GH_ADMIN_TOKEN }}
 
       - name: Git config
         run: |
